# v-spells-cfs-use-case

./: README.md  setup
CFS/: README.md
Code/apps/vs/fsw/inc/: vs_eventids.h  vs_ground.h  vs_msgstruct.h  vs_tablestruct.h
Code/apps/vsa/: CMakeLists.txt
Code/apps/vsa/fsw/inc/: vsa_eventids.h  vsa_fcncodes.h  vsa_msgstruct.h  vsa_tablestruct.h
Code/apps/vsa/fsw/src/: vsa_app.c  vsa_table.c  vsa_table.h  vsa_version.h
Code/apps/vsa/fsw/tables/: VSA_Prm_default.c
Code/apps/vsb/: CMakeLists.txt
Code/apps/vsb/fsw/inc/: vsb_eventids.h  vsb_fcncodes.h  vsb_msgstruct.h  vsb_tablestruct.h
Code/apps/vsb/fsw/src/: vsb_app.c  vsb_table.c  vsb_table.h  vsb_version.h
Code/apps/vsb/fsw/tables/: VSB_Prm_default.c
Code/apps/vsc/: CMakeLists.txt
Code/apps/vsc/fsw/inc/: vsc_eventids.h  vsc_fcncodes.h  vsc_msgstruct.h  vsc_tablestruct.h
Code/apps/vsc/fsw/src/: vsc_app.c  vsc_table.c  vsc_table.h  vsc_version.h  vsvf.h
Code/apps/vsc/fsw/tables/: VSC_Prm_default.c
Code/libs/grunt/: CMakeLists.txt
Code/libs/grunt/fsw/inc/: grunt.h  grunt_eventids.h  grunt_status.h
Code/libs/grunt/fsw/src/: grunt.c  grunt_input.c  grunt_input.h  grunt_output.c  grunt_output.h  grunt_stack.c  grunt_stack.h  grunt_version.h  grunt_vm_arithmetic.c  grunt_vm_arithmetic.h  grunt_vm_control.c  grunt_vm_control.h  grunt_vm_io.c  grunt_vm_io.h  grunt_vm_logic.c  grunt_vm_logic.h  grunt_vm_stack.c  grunt_vm_stack.h
Code/tools/TBLtest/: CMakeLists.txt  cmd.c  cmd.h  common_constants.h  deterministic.c  deterministic.h  expect.c  expect.h  file.c  file.h  mqueue.c  mqueue.h  perf.c  perf.h  send.c  send.h  tbltest.c  tbltest.h  tlm.c  tlm.h
Diffs/apps/sch_lab/fsw/tables/: sch_lab_table.c.diff
Diffs/apps/to_lab/fsw/tables/: to_lab_sub.c.diff
Diffs/sample_defs/: cpu1_cfe_es_startup.scr.diff  targets.cmake.diff
Diffs/tools/: CMakeLists.txt.diff
Docs/: build.md  challenge-1.md  challenge-2.md  challenge-3.md  dsl-vf-spec.md  grunt-manual.md  tbl-overview.md  tbl-structure.md  tbltest.md  vsa-vf-spec.md
